--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "sass": "^1.32.7",
+    "sass-loader": "^11.0.1"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.1.2",
